# elastic-quacker

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: configuration.md  rd_script.md  rd_server_api.txt
mass_storage/: CMakeLists.txt
rd_client/: __main__.py
rd_client/app_modes/: __init__.py  base.py  cli_mode.py  network_mode.py  tui_mode.py  utils.py
rd_client/parser/: __init__.py  error.py  key_seqv.py  key_seqv_parser.py  mappings.py  regex_groups.py
rd_client/payload/: __init__.py
rubber_ducky/: CMakeLists.txt  config.h  error_state.c  error_state.h  main.c  msc.c  msc.h  tusb_config.h  usb_descriptors.c  usb_general.c  usb_general.h  usb_reports.c  usb_reports.h
rubber_ducky/keyseqv/: key_seqv.c  key_seqv.h  key_seqv_linux.c  key_seqv_script.c  key_seqv_win.c
rubber_ducky/rd_server/: request_process.c  request_process.h  tcp_server.c  tcp_server.h
scripts/: linux_local_reverse_shell.txt  linux_open_fit_vut_page.txt  parser-cli.py  win_install_firefox.txt  win_local_reverse_shell.txt  win_open_powershell_as_admin.txt  win_trackmania_training01.txt
scripts/rd_parser/: error.py  key_seqv.py  key_seqv_parser.py  mappings.py  regex_groups.py
scripts/tests/: test_rd_parser.py
scripts/tests/resources/: open_fit_vutbr.txt
scripts/win/: win_open_youtube_video.txt  win_trackmania_training01.txt
tests/: test_parser.py
tests/resources/: open_fit_vut.txt
tests/typing/: README.md  lorem_ipsum.txt  randomized_ascii.txt  typing_test_lorem_ipsum.txt  typing_test_randomized_ascii.txt
